hsql2.3.2 is compiling with patches circa v5.0